<resources>
    <string name="app_name">DigiShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">خانه</string>
    <string name="categories">دسته بندی ها</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">پروفایل</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="failedLogin">عملیات لاگین ناموفق بود. لطفا نام کاربری و رمز خود را دوباره وارد کنید</string>
    <string name="password_requared">رمز درست را وارد کنید!</string>
    <string name="username_required">نام کاربری درست را وارد نمایید</string>
    <string name="search_app">جستجو در دیجی شاپ</string>
    <string name="special_suggests">پیشنهادهای ویژه</string>
    <string name="offers">تخفیفات دیجی شاپ</string>
    <string name="selection_makeup">منتخب آرایشی و بهداشتی</string>
    <string name="error_message">خطا در برقراری با سرور!</string>
    <string name="brand">برند :</string>
</resources>